// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmark renders correctly with props 1`] = `
<button
  className="place-card__bookmark-button place-card__bookmark-button--active button"
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`Bookmark renders correctly without props 1`] = `
<button
  className="place-card__bookmark-button  button"
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height="19"
    width="18"
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;
